Squashed commit of splattater/develop

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libraries/Erfurt"]
 	path = libraries/Erfurt
 	url = git@github.com:AKSW/Erfurt.git
+[submodule "libraries/lib-dssn-php"]
+	path = libraries/lib-dssn-php
+	url = git://github.com/seebi/lib-dssn-php.git
