move some classes to new Framework Saft and adjust xodx

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libraries/lib-dssn-php"]
 	path = libraries/lib-dssn-php
 	url = git://github.com/seebi/lib-dssn-php.git
+[submodule "libraries/Saft"]
+	path = libraries/Saft
+	url = git@github.com:white-gecko/Saft.git
